--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DisplayImageActivity"></activity>
+        <activity android:name=".ChooseReceiverActivity"></activity>
+        <activity android:name=".DisplayImageActivity" />
         <activity android:name=".FindUsersActivity" />
         <activity android:name=".ShowCaptureActivity" />
         <activity android:name=".LoginRegistration.RegistrationActivity" />
